--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@ node_modules
 .output
 .vercel
 .netlify
-.wrangler
 /.svelte-kit
 /build
 
@@ -15,9 +14,6 @@ Thumbs.db
 # Env
 .env
 .env.*
-!.env.example
-!.env.test
 
-# Vite
-vite.config.js.timestamp-*
-vite.config.ts.timestamp-*
+src/generated
+penny.db
