--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "vite dev --port 5300",
 		"build": "vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
@@ -22,6 +22,7 @@
 		"bits-ui": "^2.9.6",
 		"clsx": "^2.1.1",
 		"formsnap": "^2.0.1",
+		"prisma": "^6.15.0",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"sveltekit-superforms": "^2.27.1",
@@ -36,5 +37,9 @@
 		"onlyBuiltDependencies": [
 			"esbuild"
 		]
+	},
+	"dependencies": {
+		"@prisma/client": "6.15.0",
+		"better-auth": "^1.3.9"
 	}
 }
