--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/vite": "^4.0.0",
+		"@types/node": "^24.3.1",
 		"bits-ui": "^2.9.6",
 		"clsx": "^2.1.1",
 		"formsnap": "^2.0.1",
@@ -40,6 +41,7 @@
 	},
 	"dependencies": {
 		"@prisma/client": "6.15.0",
-		"better-auth": "^1.3.9"
+		"better-auth": "^1.3.9",
+		"valibot": "^1.1.0"
 	}
 }
