--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 	"dependencies": {
 		"@prisma/client": "6.15.0",
 		"better-auth": "^1.3.9",
+		"dotenv": "^17.2.2",
 		"valibot": "^1.1.0"
 	}
 }
