--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
 		"bits-ui": "^2.9.6",
 		"clsx": "^2.1.1",
 		"formsnap": "^2.0.1",
-		"prisma": "^6.15.0",
+		"mode-watcher": "^1.1.0",
+		"prisma": "^6.16.2",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"svelte-sonner": "^1.0.5",
 		"sveltekit-superforms": "^2.27.1",
 		"tailwind-merge": "^3.3.1",
 		"tailwind-variants": "^1.0.0",
@@ -40,7 +42,7 @@
 		]
 	},
 	"dependencies": {
-		"@prisma/client": "6.15.0",
+		"@prisma/client": "6.16.2",
 		"better-auth": "^1.3.9",
 		"dotenv": "^17.2.2",
 		"valibot": "^1.1.0"
