--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"bits-ui": "^2.11.4",
 		"clsx": "^2.1.1",
 		"formsnap": "^2.0.1",
+		"layerchart": "2.0.0-next.27",
 		"mode-watcher": "^1.1.0",
 		"prisma": "^6.16.2",
 		"svelte": "^5.39.2",
